correct vfolder node rendering, some spacing adjustments

--- a/css/liferea.css
+++ b/css/liferea.css
@@ -54,7 +54,7 @@ dd {
    the feed description) */
 table.itemhead {
 	margin:0;
-	padding: 2px 0 2px 0;
+	padding: 2px 2px 2px 2px;
 	width:100%;
 	background-color:#DDD;
 	border:0;
@@ -73,7 +73,7 @@ td.headright {
 }
 
 div.content {
-	padding:12px 6px 0px 6px;
+	padding:12px 6px 0px 12px;
 }
 
 div.commentlink {
